# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

*portage-2.0.46-r12 (07 Feb 2003): Fixups

  07 Feb 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Move
  logdir check/generation code so that it's created before 'clean'. Fix
  the usemask/archkeys bug and a related bug with the var enabled. Fix
  to movefile() code to ensure symlinks are handled properly.

  07 Feb 2003; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: Make per-
  ebuild logs use the counter to get a chronilogical list instead of a
  timestamp based one.
	
  07 Feb 2003; Nicholas Jones <carpaski@gentoo.org> emerge: If a package
  is requested to be updated but is not merged, still add it to world.
	
  07 Feb 2003; Nicholas Jones <carpaski@gentoo.org> *: Update to help.
  Mostly comments on --verbose. Clarification on make.conf* mirrorselect.
		
*portage-2.0.46-r11 (04 Feb 2003): Fixups

  04 Feb 2003; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: distcc
  fixups along with ccache fixups from the bug 13897 effort. Added more
  varaibles to the build data output. Allow CC/CXX to be set if they are
  not set in environment.

  04 Feb 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Removed an
  unnecessary call to os.unlink() in movefile that resulted in it failing
  when moving files across devices. HTML 404 catcher -- if the distfile is
  a reasonable size, and it's got <title>.*(not found|404).*</title> in it
  it will be deleted and the next mirror persued.

*portage-2.0.46-r10 (03 Feb 2003): Feature/Function Cleanups

  03 Feb 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Added
  quotes to fallback checksum code to ensure it works on space-containing
  filenames. Error message added in writedict. Worldfile-depleeting bug
  fixed -- 'emerge -e world'+AUTOCLEAN would cause every package in world
  to be removed from the worldfile to be removed.
